Add reflections on COVID19

--- a/_posts/2020-03-22-week08.md
+++ b/_posts/2020-03-22-week08.md
@@ -4,7 +4,11 @@ title: Week 8
 ---
 
 # COVID-19 and the Open Source Software Course:
+The one thing dominating almost every headline (and e-mail subject line) is COVID-19. A disease that was but a murmur in the news a month ago, has upended normal life, particularly for everyone in New York City, and has changed what it means to work or attend school for millions of America. I can thankfully say that neither I, nor my family, nor anyone I know has been affected by the disease and I sincerely hope that it remains that way for me, and for you as well, dear reader. That said, I do want to note for posterity how it has affected my education, and what I believe the situation will be in 1 and 2 months. 
 
+Hunter College, along with the entire City University of New York, has, of course, transitioned to online or "distance" learning. From the first announcement of that change, I was grateful for the fact that I am studying Computer Science in 2020, as there is little that cannot be distributed these days. Testing my code on Hunter machines does not require me to even leave the house and the academic and professional software development workflows already revolve around distributed systems and services like Git and Github. Of course, the switch from in-person classes to online classes in the comfort of my own home, is a bit different but not nearly the predicted "disaster" so much of social media made it out to be. The greatest impacts seem to be the inevitable awkwardness that stems from trying to foster an atmosphere of collaborative learning and conversation via online chat services, and the struggle for professors to gauge the reactions and understanding of students during class time. However, even the first week of this new format went done without any major hitches, and I found my classes to still be enjoyable.
+
+As for where I and other students will be in one to two months is hard to say. The great public push is on trying to "flatten the curve" and stop the spread of the disease, but due to issues with testing and without full understanding of the disease, the extent of exposure and the continuing consequences are still unknown. What I will say is that I don't think it was pessimistic to transition to distance learning for the entire duration of the semester. I think we will, unfortunately, all still largely find ourselves at home, trying to carry on with school and work, while only making a brief run outside for fresh air and sanity, for next couple of months. But if week one of online learning (and many online transitions for many students and professionals) can go this well, and if this distancing has the intended effect of slowing the spread and not disrupting the critical services we all need to stay alive, then I believe that we'll continue to succeed in our academic pursuits. 
 
 # FOSS Project Log:
 ### Friday, March 20
