Added note re blog edit

--- a/_posts/2020-03-29-week09.md
+++ b/_posts/2020-03-29-week09.md
@@ -12,3 +12,4 @@ title: Week 9
 # FOSS Project Log:
 
 # Other Course-Related Activity:
+This week I [edited a fellow classmates's blog](https://github.com/hunter-college-ossd-spr-2020/ElijahCano33-weekly/pull/7) and 
