Add section on reporting bugs

--- a/_posts/2020-03-29-week09.md
+++ b/_posts/2020-03-29-week09.md
@@ -6,10 +6,15 @@ title: Week 9
 # Open Source in Industry:
 
 # Reporting Bugs:
+This week I had the pleasure of reading a fun blog post entitled ["They Might Never Tell You It's Broken"](https://pointersgonewild.com/2019/11/02/they-might-never-tell-you-its-broken/) from the Pointers Gone Wild blog maintained by [Maxime Chevalier-Boisvert](https://pointersgonewild.com/about/). The entry relays the troublesome revelation the author had in the course of developing an open source JavaScript compiler: users of open source software may not notify the creator(s) or maintainer(s) of bugs or issues that they encounter with the software. Personally, I think the author hit the nail on the head with three proposed reasons why a user would not report a bug: a) belief it has been reported elsewhere, b) fear of being embarrassed, and c) lack of interest or investment on the part of the user. The first may only pertain to larger projects where it becomes far more difficult for a user to check if the issue has already been reported, but the latter two are universal. We all know the endless struggle between wanting to point out a potential problem, particularly one which is holding up our progress, and fearing coming off as unprepared at the least, or arrogant at the worst. ("Surely this must be a problem with *your* software!") The same holds true for the point on user investment: programmers are always "shopping" for useful tools and libraries, and I doubt that I am alone in being instantly turned off by an immediate failure to install, compile, etc. and continuing my search elsewhere.
+
+Above all, I think the most valuable part of the post is the reminder to developers to keep a minimalist approach in designing their software and to try installing their work themselves. Of course, as the authors of the code, they will be far better off in debugging installation problems than the average user, but will at least be alerted to the obvious problems that may be encountered. This strongly relates back to the third reason mentioned above: while developers of open source software are not under any obligation to make their software easily usable, if they have any pretensions to develop a community around their work, they have to realize that they *will* lose many potential users and contributors if their project and code are nightmares to work with and understand.
+
+On a funny side note, I learned a new Internet abbreviation/slang from the post: RTFM - Read The ...ahem... Manual. You can imagine what the F stands for, but I am just glad I didn't encounter this term the hard way!
 
 # Contributing to Wikipedia:
 
 # FOSS Project Log:
 
 # Other Course-Related Activity:
-This week I [edited a fellow classmates's blog](https://github.com/hunter-college-ossd-spr-2020/ElijahCano33-weekly/pull/7) and 
+This week I [edited a fellow classmates's blog](https://github.com/hunter-college-ossd-spr-2020/ElijahCano33-weekly/pull/7) and
