Add notes on Wikipedia contributions

--- a/_posts/2020-03-29-week09.md
+++ b/_posts/2020-03-29-week09.md
@@ -13,6 +13,11 @@ Above all, I think the most valuable part of the post is the reminder to develop
 On a funny side note, I learned a new Internet abbreviation/slang from the post: RTFM - Read The ...ahem... Manual. You can imagine what the F stands for, but I am just glad I didn't encounter this term the hard way!
 
 # Contributing to Wikipedia:
+In last week's blog I mentioned that I made my first two contributions to Wikipedia, and it was a surprisingly exciting experience. In some way, these contributions were like visiting a "tourist attraction" in your own hometown - like visiting the Empire State Building for New York City natives. We all write those activities off as pedestrian, seeing so many others make the trip and knowing we could do them any time, yet more often than not, if we take the time and make the effort, we have a lot of fun and learn a lot as well.
+
+A few points stood out to me as I tried to find my first opportunities to contribute. My first stop, as I mentioned previously, was the [Military History WikiProject's Open tasks page](https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Military_history/Open_tasks) and I spent quite some time combing through the articles under the ["Need Work on Grammar"](https://en.wikipedia.org/wiki/Category:Military_history_articles_needing_attention_to_grammar) section. Pretty quickly I found myself running into three issues. First, I noticed that many articles did not seem to have obvious issues with their grammar or any indications of such on their respective Talk pages. This could be because these pages have been edited since their tagging and no one got around to removing the grammar tag: I would consider doing this myself but it felt like too bold of a move for a rookie. Second, in some cases where I did find some potential issues, I felt uncomfortable trying to make any changes as without further specific domain and conventions knowledge, I did not want to risk making poor changes. Third, on a related note, it seemed that a fair number of regimental pages - namely the American Civil War era units - listed by the project drew heavily upon unit histories and read more like logs or lists than true articles (ex: see the [1st Maine Battery](https://en.wikipedia.org/wiki/1st_Maine_Battery)). I would love to help but, again, fearing understating, embellishing, or missing the point entirely - all very much possible when you don't understand something - I opted to move on to something with a better base on which to build.
+
+Thus, in the end I chose to make changes to developed, but still somewhat lacking articles on the [USS Mahan](https://en.wikipedia.org/w/index.php?title=USS_Mahan_(DDG-72)&diff=prev&oldid=946879140) and the [M2 Bradley](https://en.wikipedia.org/w/index.php?title=M2_Bradley&diff=prev&oldid=946881021). One last point of interest is  that in the course of looking at the USS Mahan page, and other Wikipedia articles on other ships, I saw the ships frequently referred to as a "she". In truth, I know full well this a longstanding tradition but I have always struggled to refer to inanimate objects as anything else but "it" and, with Wikipedia's emphasis on being a neutral source fresh in my mind, I wondered if there was an official policy on this practice on Wikipedia. It was fascinating to find that there is [a page](https://en.wikipedia.org/wiki/Wikipedia_talk:Manual_of_Style/Archive_(ships_as_%22she%22)) dedicated to all the discussion pages on this matter, and that, at least at the end of the most recent discussion, the resolution seemed to be that this practice, as with many conventions on Wikipedia, should be left where dominant and perhaps discarded in newer articles.
 
 # FOSS Project Log:
 
