Add notes on Kevin Flemings talk

--- a/_posts/2020-03-29-week09.md
+++ b/_posts/2020-03-29-week09.md
@@ -4,6 +4,9 @@ title: Week 9
 ---
 
 # Open Source in Industry:
+This week the Open Source Software class was graced with a very enlightening, thorough and fun presentation by Kevin Fleming, Head of Open Source Community Engagement at the Chief Technology Officer's office at Bloomberg. Personally I found myself spellbound, and I am sure that I was not alone in that, following Mr. Fleming cover the wide breadth of Bloomberg's use of and contributions to open source tools and platforms across many fields: from cloud and distributed computing to machine learning. Perhaps  what I found most interesting is the almost casual manner in which this relationship developed. While we learned that Mr. Fleming has his own background in open source software and continues to make contributions in his personal time to this day, the Bloomberg company began using open source software - the most obvious and well-known case being Git - as a practical (and sometimes free!) resource rather than out of some pre-existing dedication to the open source world. As Mr. Fleming pointed out, and I suspect this is the case for countless other companies, this usage and experience - even if only impacting *how* the company's product is made at first - serves as great incentive for the company to continue to return the FOSS world, and, in time, to begin paying it forward with their own contributions. A compelling and encouraging component of his talk was just how much of a potent base open source software had been and continues to be for Bloomberg: not parts of pet projects or community outreach programs, but in fact serving as the real muscle below a professional product in which disappointment can be measured in milliseconds and in which the competing impulses of speed and accuracy somehow have to both come out on top.
+
+Should anyone from Bloomberg - or even Mr. Fleming himself - read this blog, I want to convey the following: Mr. Fleming is an amazing ambassador for the company and for the open source community writ large. Not every open source developer may live up to his caliber, but he is an inspiring example of what my classmates and I can strive to be!
 
 # Reporting Bugs:
 This week I had the pleasure of reading a fun blog post entitled ["They Might Never Tell You It's Broken"](https://pointersgonewild.com/2019/11/02/they-might-never-tell-you-its-broken/) from the Pointers Gone Wild blog maintained by [Maxime Chevalier-Boisvert](https://pointersgonewild.com/about/). The entry relays the troublesome revelation the author had in the course of developing an open source JavaScript compiler: users of open source software may not notify the creator(s) or maintainer(s) of bugs or issues that they encounter with the software. Personally, I think the author hit the nail on the head with three proposed reasons why a user would not report a bug: a) belief it has been reported elsewhere, b) fear of being embarrassed, and c) lack of interest or investment on the part of the user. The first may only pertain to larger projects where it becomes far more difficult for a user to check if the issue has already been reported, but the latter two are universal. We all know the endless struggle between wanting to point out a potential problem, particularly one which is holding up our progress, and fearing coming off as unprepared at the least, or arrogant at the worst. ("Surely this must be a problem with *your* software!") The same holds true for the point on user investment: programmers are always "shopping" for useful tools and libraries, and I doubt that I am alone in being instantly turned off by an immediate failure to install, compile, etc. and continuing my search elsewhere.
@@ -21,5 +24,6 @@ Thus, in the end I chose to make changes to developed, but still somewhat lackin
 
 # FOSS Project Log:
 
+
 # Other Course-Related Activity:
-This week I [edited a fellow classmates's blog](https://github.com/hunter-college-ossd-spr-2020/ElijahCano33-weekly/pull/7) and
+This week I [edited a fellow classmates's blog](https://github.com/hunter-college-ossd-spr-2020/ElijahCano33-weekly/pull/7).
