Add course related acitivity note

--- a/_posts/2020-03-29-week09.md
+++ b/_posts/2020-03-29-week09.md
@@ -26,4 +26,4 @@ Thus, in the end I chose to make changes to developed, but still somewhat lackin
 
 
 # Other Course-Related Activity:
-This week I [edited a fellow classmates's blog](https://github.com/hunter-college-ossd-spr-2020/ElijahCano33-weekly/pull/7).
+This week I [edited a fellow classmates's blog](https://github.com/hunter-college-ossd-spr-2020/ElijahCano33-weekly/pull/7). I had intended to make an additional two contributions to Wikipedia but have not yet had the time - they will have to come in the next couple of days!
