Add FOSS project log

--- a/_posts/2020-03-29-week09.md
+++ b/_posts/2020-03-29-week09.md
@@ -23,7 +23,10 @@ A few points stood out to me as I tried to find my first opportunities to contri
 Thus, in the end I chose to make changes to developed, but still somewhat lacking articles on the [USS Mahan](https://en.wikipedia.org/w/index.php?title=USS_Mahan_(DDG-72)&diff=prev&oldid=946879140) and the [M2 Bradley](https://en.wikipedia.org/w/index.php?title=M2_Bradley&diff=prev&oldid=946881021). One last point of interest is  that in the course of looking at the USS Mahan page, and other Wikipedia articles on other ships, I saw the ships frequently referred to as a "she". In truth, I know full well this a longstanding tradition but I have always struggled to refer to inanimate objects as anything else but "it" and, with Wikipedia's emphasis on being a neutral source fresh in my mind, I wondered if there was an official policy on this practice on Wikipedia. It was fascinating to find that there is [a page](https://en.wikipedia.org/wiki/Wikipedia_talk:Manual_of_Style/Archive_(ships_as_%22she%22)) dedicated to all the discussion pages on this matter, and that, at least at the end of the most recent discussion, the resolution seemed to be that this practice, as with many conventions on Wikipedia, should be left where dominant and perhaps discarded in newer articles.
 
 # FOSS Project Log:
+This week I took my one (and thankfully *only*) midterm of this semester in a challenging but excellent course on computer vision. Hours of review questions and intense studying, finally coming to terms with things that puzzled me in the lectures, took up the majority of the week, as did catching up on internship time and other work, so unfortunately this week's log is going to be quite short.
 
+### Sunday, March 29
+What little time I could spare this Sunday went towards searching through issues in the Atom Github organization. This was both to meet last week's stated goal of making sure that any issues we submit on the Atom Flight Manual would not be duplicating any existing issues, and for beginning to develop a new list of *coding* issues that we could dive in on. 
 
 # Other Course-Related Activity:
 This week I [edited a fellow classmates's blog](https://github.com/hunter-college-ossd-spr-2020/ElijahCano33-weekly/pull/7). I had intended to make an additional two contributions to Wikipedia but have not yet had the time - they will have to come in the next couple of days!
