Conclude section on folding at home

--- a/_posts/2020-04-19-week10.md
+++ b/_posts/2020-04-19-week10.md
@@ -3,7 +3,9 @@
 # Folding@Home
 It seems that everywhere you turn at the present - from, of course, the news, to even your favorite YouTuber or podcast - you come across some information related to the COVID19 pandemic. The barrage is often oppressive and demoralizing, particularly with the focus on grim death tolls, suffering and shortages. However, in such times, the ways in which humanity comes together in periods of emergency and need shine through the negativity and keep us hopeful. One such ray of light that cropped up on my radar a couple of weeks ago via a [Linus Tech Tips video](https://www.youtube.com/watch?v=KU4qOebhkfs) is the Folding@Home project; this past week I took a closer look at [their part](https://foldingathome.org/covid19/) in the fight against COVID19 and must admit that I am quite impressed and enheartened by what I found. 
 
-In a nutshell, the Folding@Home project is an effort to crowdsource the work of 
+In a nutshell, the Folding@Home project is an effort to crowdsource the computationally expensive work of running protein folding simulations, by creating and maintaining a system where anyone with a computer, an Internet connection, and the Folding@Home software can donate their computational resources (CPU and GPU time) to receive, run, and return the results of simulations. This kind of research can help humanity combat viruses by achieving an understanding of their structure and behavior, and identifying possibilities for drugs which can neutralize them. With COVID19 currently rampaging across the world, the urgency of this ever-important research has come to the forefront, and has become a focus for the Folding@Home project.
+
+Beyond a general sense of awe about the potential and good of this project, three things stood out to me after my research. First, many people are looking for ways to contribute in the fight against COVID19, and while a wide variety of volunteering opportunities and donations are very worthy and needed, the Folding@Home offers a very unique chance to contribute to the science that will go after the root cause, not just manage the consequences, of the pandemic. Second, this opportunity to contribute is a keen reminder of the power of consumer  computers. Our home computers may be no match for the supercomputers which certainly come to mind when thinking of such research, but advances in personal computing technology (particularly the incredible advances in GPUs) and, more significantly, the power of personal computers *en masse*, can make a real difference in an enormous and complex scientific endeavor. (There is more  to be excited about with your computer than frames-per-second while gaming!) Last, I was particularly happy to note that Folding@Home takes an "open source" approach in making their data publicly available, so that other researchers can analyze and work with the data. In this case, the open source spirit of benefiting from as many reviewers as possible can be the real difference between life and death for people around the world. 
 
 # FOSS Project Log:
 
