Add section on Gil Yehuda talk

--- a/_posts/2020-04-19-week10.md
+++ b/_posts/2020-04-19-week10.md
@@ -1,4 +1,9 @@
+Well, well, well - it's good to be back! For those of you keeping track, this is the first blog after two weekends off due to the originally calendared "Spring break" for the Spring 2020 semester. 
+
 # A Visit From Gil Yehuda
+Since my previous blog entry, the open source course had another very insightful and entertaining guest speaker: Gil Yehuda, Senior Director of Technology Strategy at Verizon Media. Mr. Yehuda is something of a *tour-de-force* in presenting an understanding of open source. Not only is his own background and trajectory from anti-open source corporatist to open source advocate - an interesting foil to the history of the open source movement, which he also discusses so well - captivating, but he possesses *the* rare skill of being able to reduce complex phenomena down to critical points. Open source in the corporate world? Mr. Yehuda cuts through the noise in three words: "Fear, Love and Money". Companies care about what the open source movement can do to hurt them, how it can benefit them, and, at the end of the day, what it will do to their bottom line. Moreover - and I found this to be *particularly interesting* - open source offers companies opportunities to **neutralize** their competitors: making software open source can sabotage a rival that depends on a profitable closed source alternative. It is as if, like nation-states before them, today's companies wage proxy wars, all in the open source realm.
+
+It may come as no surprise then that Mr. Yehuda's discussion of how to use open source to benefit our careers both reassured and bothered me. On the one hand, his suggestions to leverage working on projects close to the heart of companies in which you are interested - especially using an open source project to improve another open source project, demonstrating dedication and knowledge - is invaluable. Open source, providing you don't make some terrible security or licensing mistakes, can be an excellent opportunity to demonstrate your abilities and further your career. However, as someone working on completing a second bachelor's degree, I've heard my fair share of career advice over the years, and I couldn't help but feel like open source is the software engineering analogy to the volunteer work liberal arts students are urged to engage in to build their resume. It would, of course, be hard to fault a person for dropping open source work after they have been hired and don't have the time to commit as before, but it is disappointing to think of open source work as many people treat volunteer or unpaid internship work: a career stepping stone. It is good to see that companies have made enormous strides in developing symbiotic relationships with the open source community, but it should *not* come at the cost of cheapening the meaning of open source. 
 
 # Folding@Home
 It seems that everywhere you turn at the present - from, of course, the news, to even your favorite YouTuber or podcast - you come across some information related to the COVID19 pandemic. The barrage is often oppressive and demoralizing, particularly with the focus on grim death tolls, suffering and shortages. However, in such times, the ways in which humanity comes together in periods of emergency and need shine through the negativity and keep us hopeful. One such ray of light that cropped up on my radar a couple of weeks ago via a [Linus Tech Tips video](https://www.youtube.com/watch?v=KU4qOebhkfs) is the Folding@Home project; this past week I took a closer look at [their part](https://foldingathome.org/covid19/) in the fight against COVID19 and must admit that I am quite impressed and enheartened by what I found. 
