Add note regarding April 18 project progress

--- a/_posts/2020-04-19-week10.md
+++ b/_posts/2020-04-19-week10.md
@@ -13,5 +13,9 @@ In a nutshell, the Folding@Home project is an effort to crowdsource the computat
 Beyond a general sense of awe about the potential and good of this project, three things stood out to me after my research. First, many people are looking for ways to contribute in the fight against COVID19, and while a wide variety of volunteering opportunities and donations are very worthy and needed, the Folding@Home offers a very unique chance to contribute to the science that will go after the root cause, not just manage the consequences, of the pandemic. Second, this opportunity to contribute is a keen reminder of the power of consumer  computers. Our home computers may be no match for the supercomputers which certainly come to mind when thinking of such research, but advances in personal computing technology (particularly the incredible advances in GPUs) and, more significantly, the power of personal computers *en masse*, can make a real difference in an enormous and complex scientific endeavor. (There is more  to be excited about with your computer than frames-per-second while gaming!) Last, I was particularly happy to note that Folding@Home takes an "open source" approach in making their data publicly available, so that other researchers can analyze and work with the data. In this case, the open source spirit of benefiting from as many reviewers as possible can be the real difference between life and death for people around the world. 
 
 # FOSS Project Log:
+### Saturday, April 18
+In the interest of honest blogging and accounting for progress, I must admit, painfully, that less progress has been made on the final project for the open source course than I - or my group mates - would have preferred. For my part, the root cause of this comes from the fact that while it has been three weeks since the prior blog,that time, including a Spring break that a break in name only, was dominated by my internship and trying to keep up with other course work. It was also not helped by the fact that our previous efforts to get involved with the Atom community have not been met with much progress. Our issue regarding the Atom Flight Manual section on setting up a development environment: "triaged". Checking the interest in following up on an issue suggesting man pages for the `atom` and `apm` commands: ignored. Reaching out via Slack to ask for ways to get involved? Directed towards a long list of *old* issues marked as "help wanted" and pull requests which, for reasons unknown, never get merged. To be frank, it has been a discouraging beginning, one that we are surprised by given Github's high talk about Atom as a new-age open source initiative. 
+
+Thus today featured a group meeting and status assessment. On the one hand we focused on how to implement the aforementioned man pages (knowing full well that any pull request we make may also be ignored). Of particular note here is that one maintainer noted that any man pages created for either command should be *generated* off the start scripts and argument parsers, rather manually written, so as to be automatically updated going forward. Moreover, man pages must be developed in a very particular roff format, making this no simple task. On the other hand, in cautious preparation of a fail safe, we began to consider other opportunities for open source contributions, namely helping to improve and develop tutorials for OpenCV. 
 
 # Other Course-Related Activity:
