Add note re contributions:

--- a/_posts/2020-04-19-week10.md
+++ b/_posts/2020-04-19-week10.md
@@ -19,3 +19,4 @@ In the interest of honest blogging and accounting for progress, I must admit, pa
 Thus today featured a group meeting and status assessment. On the one hand we focused on how to implement the aforementioned man pages (knowing full well that any pull request we make may also be ignored). Of particular note here is that one maintainer noted that any man pages created for either command should be *generated* off the start scripts and argument parsers, rather manually written, so as to be automatically updated going forward. Moreover, man pages must be developed in a very particular roff format, making this no simple task. On the other hand, in cautious preparation of a fail safe, we began to consider other opportunities for open source contributions, namely helping to improve and develop tutorials for OpenCV. 
 
 # Other Course-Related Activity:
+With most of my time dominated by my internship and other coursework, I unfortunately have not been able to make any further contributions. I do look forward to resuming OpenStreetMaps and Wikipedia contributions in the near future, as I did get quite a bit of satisfaction from my small drops in those two enormous open source oceans!
