Add response to Vicky Brasseur talk

--- a/_posts/2020-04-26-week11.md
+++ b/_posts/2020-04-26-week11.md
@@ -1,4 +1,9 @@
 # Getting Down to Earth With Vicky Brasseur
+This past week our open source class received a particularly thought-provoking and passionate talk from Vicky Brasseur, who has quite the background in - particularly the business side of - the open source world. Ms. Brasseur is a former VP of the Open Source Initiative, currently serves as Director of Open Source Strategy for Juniper Networks, and is also the author of Forge Your Future With Open Source, which discusses how to contribute to open source projects. Her talk focused on the theme of "Four Ways to Spread the Four Freedoms", referring of course to the freedoms to run, study, redistribute and improve software. While this sounds like the focus of a lofty and idealistic discussion, Ms. Brasseur instead laid out a positive, but nonetheless biting, message: the mission is not yet accomplished. The FOSS world has accomplished a lot, but there remains much to be done.
+
+In a way I could not help but feel that Ms. Brasseur offered what seems fairly inevitable in the history of revolutions: a follow-up critique on how the revolution is incomplete and the stated goals and ideals of the revolution had not been met in full (or perhaps that the revolution had been betrayed or a was always a lie). The two most immediate reactions to that statement are likely: a) revolution?! and b) was the talk that negative? Regarding the former, I don't believe its of much value to try to compare or contrast the open source movement to the likes of the French Revolution, but I will say that despite the relative youth of digital computers in the span of human existence, the open source movement *was* a revolution, rebelling against the dominant closed-source and proprietary forces of the day. Moreover, as with many revolutions, the open source movement has meant many things to many people, regardless of the official published manifestos and the declarations of its leaders. 
+
+As for Ms. Brasseur's outlook: no, I would not say the talk was negative or that she proclaimed the movement shallow or betrayed. In fact, while not shying away from calling out some of the worst habits of the open source world - from thankless communities to documentationless projects - and the need for some desperate fixes, like a "no a**hole" policy in open source chats, her message was one of hope. The open source revolution mission is not accomplished, but nor is the effort out of ideas or steam. By focusing on the four general approaches Ms. Brasseur laid out - applicability, usability, inclusivity and humility - in combination with a healthy recognition of the privileged positions we have in our opportunities to choose and contribute to open source projects, the movement can continue to move forward and do better. Ignorance and cheap solutions are huge enemies, but not insurmountable, particularly if the values of the movement are well-defined and the participants strive to adhere to them with sincerity. 
 
 # `Code.gov`
 
