Add notes re code.gov

--- a/_posts/2020-04-26-week11.md
+++ b/_posts/2020-04-26-week11.md
@@ -6,6 +6,9 @@ In a way I could not help but feel that Ms. Brasseur offered what seems fairly i
 As for Ms. Brasseur's outlook: no, I would not say the talk was negative or that she proclaimed the movement shallow or betrayed. In fact, while not shying away from calling out some of the worst habits of the open source world - from thankless communities to documentationless projects - and the need for some desperate fixes, like a "no a**hole" policy in open source chats, her message was one of hope. The open source revolution mission is not accomplished, but nor is the effort out of ideas or steam. By focusing on the four general approaches Ms. Brasseur laid out - applicability, usability, inclusivity and humility - in combination with a healthy recognition of the privileged positions we have in our opportunities to choose and contribute to open source projects, the movement can continue to move forward and do better. Ignorance and cheap solutions are huge enemies, but not insurmountable, particularly if the values of the movement are well-defined and the participants strive to adhere to them with sincerity. 
 
 # `Code.gov`
+Professor Weiss recently pointed out a fascinating project, of which I had not heard of previously, to the open source class: [Code.gov](https://code.gov/#!/). The website acts as the gateway to the U.S. Federal Government's steps in the direction of open source software: while the terms *government* and *open source* hardly seem to belong in the same sentence, and that explanation requires some qualification, your eyes do not deceive you. To be clear, the project is first and foremost an effort to share work and promote code reuse across Federal agencies (see [here](https://code.gov/about/overview/introduction)), and I must say that I wholeheartedly support that idea. The tendency towards tools developed in secrecy and behind closed-doors is a counterproductive one, both in government, industry or really any endeavor. Some may prefer Linus' law here but perhaps the simplest relevant adage is: "don't reinvent the wheel." Will every agency - or even every department within an agency - require the same kind of wheel? No, but in the spirit of sharing, cooperation, and broad review, the best can be made of existing work and needs can be met quickly and cost-effectively. Who doesn't like to imagine that their tax dollars are well spent?!
+
+However, the initiative also contains an "Open Source Pilot Program" whereby agencies must release at least 20% of newly developed Federal source code to the public. (Notably the code.gov website itself is an open source project.) As with most things open source, I believe this can only be beneficial (provided careful security review and precautions) on both sides of the exchange: the public benefitting from usage of such code and opportunities to contribute, and the government benefitting from review, ideas and contributions. Without extensive background in web technologies and possessing only beginner knowledge of JavaScript, my own ability to contribute to the [open tasks and issues](https://code.gov/open-tasks) may be limited but not out of the question. In particular, I found some opportunities to work on a CDC tool which seem interesting and of reasonable beginner difficulty [here](https://github.com/CDCgov/MicrobeTrace/issues/47) and [here](https://github.com/CDCgov/MicrobeTrace/issues/32).
 
 # Coronavirus Data Repository by John Hopkins CSSE
 
