Add final project log for week 11

--- a/_posts/2020-04-26-week11.md
+++ b/_posts/2020-04-26-week11.md
@@ -12,6 +12,16 @@ However, the initiative also contains an "Open Source Pilot Program" whereby age
 
 # Coronavirus Data Repository by John Hopkins CSSE
 
+
 # FOSS Project Log:
+### Monday, April 20
+In light of the frustration encountered by our final project group, which I expressed in last week's blog, the group met with Professor Weiss to discuss our difficulties and next steps. Unfortunate as these difficulties are, they are not unheard of in open source projects, particularly as priorities change and maintainers engage in other responsibilities. Professor Weiss graciously permitted us the freedom to change projects if we did not see our contributions as likely to have any impact and if we were not going to enjoy engaging in the Atom project. Thus our group resolved to carry out further research into other possible projects where our efforts may be better directed.
+
+### Saturday, April 25
+Saturday was spent primarily looking at OpenCV tutorials and issues, as well as the [scikit-learn project](https://github.com/scikit-learn/scikit-learn) proposed by Boubacar. I have used scikit-learn, commonly abbreviated as sklearn, before, and have done considerable work with other Python libraries, but had not considered these as potential sources of open source opportunities! I may be biased given my own affinity for computer vision, but OpenCV, which does have some issues and wiki documents regarding improving tutorials and documentation, seems viable. Sklearn will require deeper digging to confirm viability. 
+
+### Sunday, April 26
+Due to a very serious health matter in my family (and a night of poor sleep), Sunday did not turn out to be nearly as productive as planned. Progress on the final project - aside from looking at opportunities to contribute in the aforementioned coronavirus data project - was unfortunately limited to discovering that the Pandas library for Python is also open-source and some discussion with the group regarding their thoughts and findings.
 
 # Other Course-Related Activity:
+Nothing further at this time.
